@@ -2028,67 +2028,78 @@ class EnchantMoreListener implements Listener {
         }
     }
 
+    static private boolean shouldGlow(ItemStack item, Player player) {
+        // Sword + Flame = create semi-permanent lit path
+        if (isSword(item.getType()) && hasEnch(item, FLAME, player)) {
+            return true;
+        }
+
+        if (isPickaxe(item.getType()) || isShovel(item.getType()) || isAxe(item.getType())) {
+            // Pickaxe + Flame II = auto-smelt and light path
+            // Shovel + Flame II = auto-smelt and light path
+            // Axe + Flame II = auto-smelt and lit path
+            // so hot it glows and smelts!
+            if (hasEnch(item, FLAME, player) && getLevel(item, FLAME, player) >= 2) { // TODO: configurable minimum level
+                return true;
+            }
+        }
+
+        return false;
+    }
+
     @EventHandler(priority = EventPriority.NORMAL, ignoreCancelled=true)
     public void onPlayerItemHeld(PlayerItemHeldEvent event) {
         Player player = event.getPlayer();
         ItemStack item = player.getInventory().getItem(event.getNewSlot());
 
-        if (item != null && isSword(item.getType())) {
-            // Sword + Flame = create semi-permanent lit path
-            if (hasEnch(item, FLAME, player)) {
-                // Task to light up player, as long as its holding the right tool
-                class EnchantMoreFlameLightTask implements Runnable {
-                    Player player;
-                    EnchantMore plugin;
+        if (item != null && shouldGlow(item, player)) {
+            // Task to light up player, as long as its holding the right tool
+            class EnchantMoreFlameLightTask implements Runnable {
+                Player player;
+                EnchantMore plugin;
 
-                    public EnchantMoreFlameLightTask(EnchantMore plugin, Player player) {
-                        this.plugin = plugin;
-                        this.player = player;
-                    }
-
-                    public void run() {
-                        ItemStack item = player.getItemInHand();
-
-                        if (item != null && EnchantMoreListener.isSword(item.getType())) {
-                            if (hasEnch(item, EnchantMoreListener.FLAME, player)) {
-                                Location to = player.getLocation();
-                                World world = to.getWorld();
-
-                                int x = to.getBlockX();
-                                int y = to.getBlockY();
-                                int z = to.getBlockZ();
-
-                                // Light up player like a torch 
-                                // http://forums.bukkit.org/threads/make-a-player-light-up-like-they-are-a-torch.58749/#post-952252
-                                // http://dev.bukkit.org/server-mods/head-lamp/
-                                ((CraftWorld)world).getHandle().a(net.minecraft.server.EnumSkyBlock.BLOCK, x, y+2, z, 15);
-                                //((CraftWorld)world).getHandle().notify(x, y+2, z);
-                                // Force update
-                                Location below = new Location(world, x, y+1, z);
-                                below.getBlock().setType(below.getBlock().getType());
-                                below.getBlock().setData(below.getBlock().getData());
-
-                                // Schedule another task to update again
-                                // This won't be scheduled if they didn't have the right tool, so it'll die off
-                                //plugin.log.info("LIT");
-
-                                // Updates faster if higher level
-                                int period = 20 * 2 / getLevel(item, EnchantMoreListener.FLAME, player);
-                                Bukkit.getScheduler().scheduleSyncDelayedTask(plugin, new EnchantMoreFlameLightTask(plugin, player), period);
-                            }
-                        }
-                    }
+                public EnchantMoreFlameLightTask(EnchantMore plugin, Player player) {
+                    this.plugin = plugin;
+                    this.player = player;
                 }
 
+                public void run() {
+                    ItemStack item = player.getItemInHand();
 
+                    if (item != null && EnchantMoreListener.shouldGlow(item, player)) {
+                        Location to = player.getLocation();
+                        World world = to.getWorld();
 
+                        int x = to.getBlockX();
+                        int y = to.getBlockY();
+                        int z = to.getBlockZ();
 
-                EnchantMoreFlameLightTask task = new EnchantMoreFlameLightTask(plugin, player);
+                        // Light up player like a torch 
+                        // http://forums.bukkit.org/threads/make-a-player-light-up-like-they-are-a-torch.58749/#post-952252
+                        // http://dev.bukkit.org/server-mods/head-lamp/
+                        ((CraftWorld)world).getHandle().a(net.minecraft.server.EnumSkyBlock.BLOCK, x, y+2, z, 15);
+                        //((CraftWorld)world).getHandle().notify(x, y+2, z);
+                        // Force update
+                        Location below = new Location(world, x, y+1, z);
+                        below.getBlock().setType(below.getBlock().getType());
+                        below.getBlock().setData(below.getBlock().getData());
 
-                // run once to kick off, it will re-schedule itself if appropriate
-                // (note need to schedule to run, so will run after item actually changes in hand)
-                Bukkit.getScheduler().scheduleSyncDelayedTask(plugin, new EnchantMoreFlameLightTask(plugin, player));
+                        // Schedule another task to update again
+                        // This won't be scheduled if they didn't have the right tool, so it'll die off
+                        //plugin.log.info("LIT");
+
+                        // Updates faster if higher level
+                        int period = 20 * 2 / getLevel(item, EnchantMoreListener.FLAME, player);
+                        Bukkit.getScheduler().scheduleSyncDelayedTask(plugin, new EnchantMoreFlameLightTask(plugin, player), period);
+                    }
+                }
             }
+
+            EnchantMoreFlameLightTask task = new EnchantMoreFlameLightTask(plugin, player);
+
+            // run once to kick off, it will re-schedule itself if appropriate
+            // (note need to schedule to run, so will run after item actually changes in hand)
+            Bukkit.getScheduler().scheduleSyncDelayedTask(plugin, new EnchantMoreFlameLightTask(plugin, player));
         }
     }
 
